# iri_navigation

./: README.md
branches/deacc_oa/: stack.xml
branches/deacc_oa/iri_checkpoint_nav/: CMakeLists.txt
branches/deacc_oa/iri_checkpoint_nav/launch/: marker_rviz_example.launch
branches/deacc_oa/iri_checkpoint_nav/src/examples/: checkpoint_nav_goals_file.cpp
branches/deacc_oa/iri_checkpoint_nav/src/test/: checkpoint_marker_test.cpp  rviz_marker_stub.cpp
branches/deacc_oa/iri_checkpoint_nav/test/: test_checkpoint_manager.test
branches/deacc_oa/iri_localization3d/: CMakeLists.txt
branches/deacc_oa/iri_localization3d/cfg/: localization3d_alg_config.cfg
branches/deacc_oa/iri_localization3d/cfg/cpp/localization3d_node/: Localization3dConfig.h
branches/deacc_oa/iri_localization3d/include/: localization3d_alg.h  localization3d_alg_node.h
branches/deacc_oa/iri_localization3d/launch/: debugLoc.launch  loc_parameters.yaml
branches/deacc_oa/iri_localization3d/src/: localization3d_alg_node.cpp
iri_ackermann_local_planner/: CMakeLists.txt  ackermannlp_plugin.xml  package.xml
iri_ackermann_local_planner/cfg/: AckermannLocalPlanner.cfg  ackermann_local_planner_alg_config.cfg
iri_ackermann_local_planner/include/: ackermann_odom_helper.h  ackermann_planner.h  ackermann_planner_ros.h  goal_functions.h  map_cell.h  map_grid.h  map_grid_visualizer.h  point_grid.h  trajectory.h  trajectory_planner_ros.h  voxel_grid_model.h  world_model.h
iri_ackermann_local_planner/src/: ackermann_odom_helper.cpp  ackermann_planner.cpp  ackermann_planner_ros.cpp  ackermann_planner_util.cpp  ackermann_trajectory_generator.cpp  ackermann_trajectory_search.cpp  costmap_model.cpp  goal_functions.cpp  map_grid_visualizer.cpp  point_grid.cpp  trajectory.cpp  trajectory_planner.cpp  voxel_grid_model.cpp
iri_nav_msgs/: CMakeLists.txt  manifest.xml
iri_nav_msgs/msg/: PoseWithCovarianceStampedArray.msg
iri_navigation/: CMakeLists.txt  package.xml
iri_people_simulation/: CMakeLists.txt  manifest.xml  package.xml
iri_people_simulation/cfg/: PeopleSimulation.cfg  people_simulation_alg_config.cfg
iri_people_simulation/include/: people_simulation_alg_node.h
iri_people_simulation/src/: people_simulation_alg_node.cpp
iri_platform_teleop/: CMakeLists.txt  package.xml
iri_platform_teleop/cfg/: PlatformTeleop.cfg  platform_teleop_alg_config.cfg
iri_platform_teleop/include/: platform_teleop_alg.h
iri_platform_teleop/launch/: tibi_dabo_teleop_remap.launch
iri_platform_teleop/src/: platform_teleop_alg.cpp  platform_teleop_alg_node.cpp
iri_poseslam/: CMakeLists.txt  manifest.xml  package.xml
iri_poseslam/cfg/: Poseslam.cfg  poseslam_alg_config.cfg
iri_poseslam/config/: poseslam_occ.rviz
iri_poseslam/include/: sensors_2_link_alg_node.h  trajectory_3Dscans_2_pointcloud_alg_node.h  trajectory_scans_2_occgrid_alg_node.h  trajectory_scans_2_pointcloud_alg_node.h
iri_poseslam/launch/: poseslam.launch  poseslam_occ.launch  poseslam_occ_test.launch
iri_poseslam/src/: odom_2_odomrel_alg_node.cpp  poseslam_alg_node.cpp  sensors_2_link_alg_node.cpp  trajectory_scans_2_occgrid_alg_node.cpp  trajectory_scans_2_pointcloud_alg_node.cpp
iri_safe_cmd/: CMakeLists.txt  package.xml
iri_safe_cmd/cfg/: SafeCmd.cfg
iri_safe_cmd/docs/: SafeCmdConfig.dox
iri_safe_cmd/include/: safe_cmd_alg_node.h
iri_safe_cmd/launch/: test_bag.launch
iri_safe_cmd/src/: safe_cmd_alg_node.cpp
trunk/: stack.xml
trunk/iri_bspline_navfn/: manifest.xml  (+2 more)
trunk/iri_diff_local_planner/: CMakeLists.txt  difflp_plugin.xml  manifest.xml
trunk/iri_diff_local_planner/cfg/: IriDiffLocalPlanner.cfg
trunk/iri_diff_local_planner/docs/: IriDiffLocalPlannerConfig-usage.dox  IriDiffLocalPlannerConfig.dox  IriDiffLocalPlannerConfig.wikidoc
trunk/iri_diff_local_planner/include/iri_diff_local_planner/: costmap_model.h  goal_functions.h  map_cell.h  map_grid.h  map_grid_cost_point.h  map_grid_visualizer.h  planar_laser_scan.h  point_grid.h  trajectory.h  trajectory_planner.h  trajectory_planner_ros.h  voxel_grid_model.h  world_model.h
trunk/iri_diff_local_planner/src/: costmap_model.cpp  goal_functions.cpp  map_cell.cpp  map_grid.cpp  map_grid_visualizer.cpp  point_grid.cpp  trajectory.cpp  trajectory_planner.cpp  trajectory_planner_ros.cpp  voxel_grid_model.cpp
trunk/iri_diff_local_planner/srv/: change_max_vel.srv
trunk/iri_poseslam/: CMakeLists.txt  manifest.xml  readme.txt
trunk/iri_poseslam/cfg/: poseslam_alg_config.cfg
trunk/iri_poseslam/config/: poseslam3D.vcg
trunk/iri_poseslam/docs/: PoseslamConfig-usage.dox  PoseslamConfig.dox  PoseslamConfig.wikidoc
trunk/iri_poseslam/include/: poseslam_alg.h  poseslam_alg_node.h  scans_2_odom_alg.h  scans_2_odom_alg_node.h  sensors_2_link_alg.h  sensors_2_link_alg_node.h  trajectory_2_markers_alg.h  trajectory_2_markers_alg_node.h  trajectory_3Dscans_2_pointcloud_alg.h  trajectory_3Dscans_2_pointcloud_alg_node.h  trajectory_broadcaster_alg.h  trajectory_broadcaster_alg_node.h  trajectory_scans_2_pointcloud_alg.h  trajectory_scans_2_pointcloud_alg_node.h
trunk/iri_poseslam/launch/: poseslam.launch  poseslamRAFA.launch  poseslam_3D.launch  poseslam_fused.launch  poseslam_no_rviz.launch
trunk/iri_poseslam/src/: poseslam_alg.cpp  poseslam_alg_node.cpp  scans_2_odom_alg.cpp  scans_2_odom_alg_node.cpp  sensors_2_link_alg.cpp  sensors_2_link_alg_node.cpp  trajectory_2_markers_alg.cpp  trajectory_2_markers_alg_node.cpp  trajectory_3Dscans_2_pointcloud_alg.cpp  trajectory_3Dscans_2_pointcloud_alg_node.cpp  trajectory_broadcaster_alg.cpp  trajectory_broadcaster_alg_node.cpp  trajectory_scans_2_pointcloud_alg.cpp  trajectory_scans_2_pointcloud_alg_node.cpp
trunk/iri_poseslam/srv/: GetOdoms.srv
trunk/my_map_checker/: CMakeLists.txt  mainpage.dox  manifest.xml
trunk/my_map_checker/cfg/: my_map_checker_alg_config.cfg
trunk/my_map_checker/config/: test.vcg
trunk/my_map_checker/include/: my_map_checker_alg.h  my_map_checker_alg_node.h
trunk/my_map_checker/launch/: debug.launch  test.launch
trunk/my_map_checker/src/: my_map_checker_alg.cpp  my_map_checker_alg_node.cpp
(+330 files in other folders)
